# PulseEngineSource

./: .gitignore  CMakeLists.txt  DocApiEngine  DocSourceEngine  LICENSE  README.md  doxyfileReadme.md
BuildScript/: ToEditor.bat  ToGame.bat
BuilderScript/: pchBuilder.bat
BuilderScript/ObjBuilder/: ObjBuilder.bat
BuilderScript/scriptsEngineGenerator/: build_dll.bat  build_exe.bat
BuilderScript/scriptsGameGenerator/: build_dll.bat
CMake/: copy_and_strip_cpp.cmake  copy_dll_lib.cmake
CMake/GenerateUserDll/: CMakeLists.txt
PulseEngineEditor/: Engine-config.ini
PulseEngineEditor/EngineConfig/: inputConfig.pconfig
PulseEngineEditor/Entities/: Cube.pEntity  PlayerBehavior.cpp  PlayerBehavior.h  o.pEntity
PulseEngineEditor/Guid/: guidCollectionEntities.puid  guidCollectionMaterials.puid  guidCollectionMeshes.puid  guidCollectionTextures.puid
PulseEngineEditor/InterfaceEditor/: BuildGameCoroutine.cpp  Console.cpp  Console.h  InterfaceEditor.cpp  InterfaceEditor.h  InterfaceEditorFileExplorer.cpp  TopBar.cpp  TopBar.h  ViewportRenderer.cpp  ViewportRenderer.h
PulseEngineEditor/InterfaceEditor/Account/: Account.cpp
PulseEngineEditor/InterfaceEditor/InterfaceAPI/: PulseInterfaceAPI.cpp  PulseInterfaceAPI.h
PulseEngineEditor/InterfaceEditor/NewFileCreator/: NewFileManager.cpp
PulseEngineEditor/InterfaceEditor/Tools/EntityEditor/: EntityEditor.cpp  EntityEditor.h
PulseEngineEditor/InterfaceEditor/Tools/MaterialEditor/: MaterialEditor.cpp  MaterialEditor.h
PulseEngineEditor/InterfaceEditor/UiHelperTool/: UiHelperTool.cpp  UiHelperTool.h
PulseEngineEditor/InterfaceEditor/WidgetEditor/: WidgetEditor.cpp  WidgetEditor.h
PulseEngineEditor/Scenes/: 0.pmap  defaultMap.pmap
PulseEngineEditor/shaders/depthMap/: Depth.vert
include/: camera.h  glad.h  renderer.h  shader.h  zep.h
include/zep/imgui/: display_imgui.h
src/: camera.cpp  glad.c  main.cpp  pch.h  renderer.cpp  shader.cpp
src/Common/: EditorDefines.h  UseFullDefine.h  common.h  dllExport.h
src/Common/Utils/: StringUtilitary.h
src/PulseEngine/API/: EngineApi.h  GameEntity.cpp  GameEntity.h
src/PulseEngine/API/CameraAPI/: CameraAPI.cpp  CameraAPI.h
src/PulseEngine/API/EntityAPI/: EntityApi.cpp  EntityApi.h
src/PulseEngine/API/InputAPI/: InputAPI.cpp  InputAPI.h
src/PulseEngine/API/MaterialAPI/: MaterialApi.cpp  MaterialApi.h
src/PulseEngine/API/PhysicAPI/: PhysicAPI.cpp  PhysicAPI.h
src/PulseEngine/CustomScripts/: IScripts.h  ScriptsLoader.cpp
src/PulseEngine/ModuleLoader/: ModuleLoader.cpp
src/PulseEngine/ModuleLoader/IModule/: IModule.h
src/PulseEngine/core/: PulseEngineBackend.cpp  PulseEngineBackend.h
src/PulseEngine/core/Entity/: Entity.cpp  Entity.h
src/PulseEngine/core/FileManager/: FileManager.cpp  FileManager.h
src/PulseEngine/core/FileManager/Archive/: Archive.h  DiskArchive.h
src/PulseEngine/core/FileManager/FileReader/: FileReader.cpp  FileReader.h
src/PulseEngine/core/GUID/: GuidCollection.cpp  GuidCollection.h  GuidGenerator.cpp  GuidGenerator.h  GuidReader.cpp  GuidReader.h
src/PulseEngine/core/Gamemode/: Gamemode.cpp  Gamemode.h
src/PulseEngine/core/Gamemode/HudController/: HudController.cpp  HudController.h  Widget.cpp  Widget.h
src/PulseEngine/core/Gamemode/HudController/WidgetComponent/: WidgetComponent.cpp  WidgetComponent.h
src/PulseEngine/core/Gamemode/HudController/WidgetComponent/TextComponent/: TextComponent.cpp  TextComponent.h
src/PulseEngine/core/Graphics/: GpuDesc.h  Handles.h  ICommandList.h  IGraphicsApi.h  IRenderDevice.h  TextRenderer.h
src/PulseEngine/core/Graphics/GLRender/: GLCommandList.h  GLRenderDeviceAdapter.cpp  GLRenderDeviceAdapter.h
src/PulseEngine/core/Graphics/OpenGLAPI/: OpenGLApi.cpp  OpenGLApi.h  TextRendererGl.cpp  TextRendererGl.h
src/PulseEngine/core/Input/: InputSystem.cpp  InputSystem.h
src/PulseEngine/core/JobSystem/: JobSystem.cpp  JobSystem.h
src/PulseEngine/core/Lights/: LightManager.cpp  Lights.cpp  Lights.h
src/PulseEngine/core/Lights/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
src/PulseEngine/core/Lights/PointLight/: PointLight.cpp
src/PulseEngine/core/Material/: Material.cpp  Material.h  MaterialManager.cpp  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h
src/PulseEngine/core/Math/: Mat3.h  Mat4.h  MathUtils.h  Quaternion.h  Vector.h
src/PulseEngine/core/Math/Frustum/: AABB.h  Frustum.cpp  Frustum.h
src/PulseEngine/core/Math/Transform/: Transform.cpp  Transform.h
src/PulseEngine/core/Meshes/: Mesh.cpp  Mesh.h  RenderableMesh.cpp  RenderableMesh.h  SkeletalMesh.cpp  SkeletalMesh.h  StaticMesh.cpp  StaticMesh.h  Vertex.h
src/PulseEngine/core/Meshes/primitive/: Primitive.cpp
src/PulseEngine/core/Physics/: CollisionManager.cpp  PhysicManager.cpp  PhysicManager.h
src/PulseEngine/core/Physics/Cast/: Casting.cpp  Casting.h
src/PulseEngine/core/Physics/Collider/: BoxCollider.cpp  BoxCollider.h  Collider.h
src/PulseEngine/core/Physics/PhysicAPI/: PhysicAPI.cpp  PhysicAPI.h
src/PulseEngine/core/Physics/PhysicCommand/: PhysicsCommand.cpp  PhysicsCommand.h
src/PulseEngine/core/Profiler/: ProfileTimer.cpp  ProfileTimer.h  Profiler.cpp  Profiler.h  TraceEvent.h
src/PulseEngine/core/PulseObject/: PulseObject.cpp  PulseObject.h
src/PulseEngine/core/PulseObject/TypeRegister/: TypeRegister.h
src/PulseEngine/core/PulseScript/: NativeInit.cpp  NativeInit.h
src/PulseEngine/core/SceneLoader/: SceneLoader.cpp
src/PulseEngine/core/SceneManager/: HierarchyNode.h  SceneManager.cpp  SceneManager.h
src/PulseEngine/core/SceneManager/SpatialPartition/: SpatialPartition.h
src/PulseEngine/core/SceneManager/SpatialPartition/SimpleSpatial/: SimpleSpatial.cpp  SimpleSpatial.h
src/imGUI/TextEditor/: editor.cpp
